# Allocator

./: CMakeLists.txt  README.md
src/: allocator.c  allocator.h.in  allocator_debug.h.in
src/port/: port.h
src/port/FreeRTOS/: CMakeLists.txt  port.c
test/: CMakeLists.txt  README.md  test.c
toolchains/: README.md  arm.cmake
